<resources>
    <string name="app_name">StartAnDroidAcademy</string>
    <string name="back_text_btn"> Back</string>
    <string name="title_activity_movie_details">Movie details</string>
    <string name="name_actor1">Robert Downey Jr.</string>
    <string name="name_actor2">Chris Evans</string>
    <string name="name_actor3">Mark Ruffalo</string>
    <string name="name_actor4">Chris Hemsworth</string>
    <string name="button_show_movie_details">Show movie details</string>
    <string name="button_back">Back</string>
    <string name="title_storyline">Storyline</string>
    <string name="title_cast">Cast</string>
    <string name="text_storyline">After the devastating events of Avengers: Infinity War,
        the universe is in ruins. With the help of remaining allies, the Avengers assemble once
        more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="age">13+</string>
    <string name="movie_name">Avengers:\nEnd Game</string>
    <string name="movie_tag">Action, Adventure, Fantasy</string>
    <string name="movie_review">125 Reviews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>

</resources>