<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient_bg_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_background"
            app:layout_constraintBottom_toBottomOf="@+id/iv_background"/>

        <TextView
            android:id="@+id/tv_path"
            android:layout_width="@dimen/width_back_button"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_back_button"
            android:layout_marginTop="@dimen/margin_top_back_button"
            android:alpha="0.5"
            android:fontFamily="@font/roboto_light"
            android:gravity="end|center_vertical"
            android:text="@string/button_back"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="normal"
            app:drawableStartCompat="@drawable/ic_path"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="@dimen/width_age_field"
            android:layout_height="@dimen/width_age_field"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_top_age"
            android:alpha="0.9"
            android:background="@drawable/shape_rectangle_with_circle_corners"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:text="@string/age"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_top_age"
            android:fontFamily="@font/roboto_black"
            android:letterSpacing="-0.05"
            android:text="@string/movie_name"
            android:gravity="start|bottom"
            android:textColor="@color/text_light"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_background"
            app:lineHeight="40dp"/>

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:fontFamily="@font/roboto_light"
            android:gravity="start|top"
            android:text="@string/movie_tag"
            android:textColor="@color/text_red"
            android:textSize="14sp"
            app:lineHeight="@dimen/height_textline_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"/>

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:theme="@style/MyRatingBar"
            android:progressTint="@color/rating_star_red"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_normal"
            android:numStars="5"
            android:rating="3.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tag"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="97.35dp"/>

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_textline_normal"
            android:layout_marginStart="5.65dp"
            android:fontFamily="@font/roboto_black"
            android:gravity="start|top"
            android:text="@string/movie_review"
            android:textAllCaps="true"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_tag"
            app:layout_constraintTop_toTopOf="@id/rating_bar"
            app:layout_constraintBottom_toBottomOf="@id/rating_bar"/>


        <TextView
            android:id="@+id/tv_storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_textline_normal"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:fontFamily="@font/roboto_black"
            android:text="@string/title_storyline"
            android:textColor="@color/text_light"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_review"/>

        <TextView
            android:id="@+id/tv_storyline"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_story"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:gravity="center_vertical"
            android:fontFamily="@font/roboto_light"
            android:text="@string/text_storyline"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_storyline_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_cast"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_textline_large"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="@font/roboto_black"
            android:gravity="center_horizontal"
            android:letterSpacing="-0.017"
            android:text="@string/title_cast"
            android:textColor="@color/text_light_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_storyline"/>

        <ImageView
            android:id="@+id/iv_actor1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginTop="@dimen/margin_tiny_plus"
            android:layout_marginStart="@dimen/margin_normal"
            android:scaleType="centerCrop"
            android:src="@drawable/actor1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_actor2"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"/>

        <ImageView
            android:id="@+id/iv_actor2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginTop="@dimen/margin_tiny_plus"
            android:layout_marginStart="@dimen/margin_small"
            android:scaleType="centerCrop"
            android:src="@drawable/actor2"
            app:layout_constraintStart_toEndOf="@id/iv_actor1"
            app:layout_constraintEnd_toStartOf="@id/iv_actor3"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"/>

        <ImageView
            android:id="@+id/iv_actor3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginTop="@dimen/margin_tiny_plus"
            android:layout_marginStart="@dimen/margin_small"
            android:scaleType="centerCrop"
            android:src="@drawable/actor3"
            app:layout_constraintStart_toEndOf="@id/iv_actor2"
            app:layout_constraintEnd_toStartOf="@id/iv_actor4"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"/>

        <ImageView
            android:id="@+id/iv_actor4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginTop="@dimen/margin_tiny_plus"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_normal"
            android:scaleType="centerCrop"
            android:src="@drawable/actor4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_actor3"
            app:layout_constraintTop_toBottomOf="@id/tv_cast"/>

        <TextView
            android:id="@+id/tv_actor_name1"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_textline_extra_large"
            android:layout_marginTop="@dimen/margin_tiny"
            android:height="@dimen/height_textline_small"
            android:fontFamily="@font/roboto_black"
            android:gravity="center_horizontal|start"
            android:text="@string/name_actor1"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/iv_actor1"
            app:layout_constraintStart_toStartOf="@id/iv_actor1"
            app:layout_constraintTop_toBottomOf="@+id/iv_actor1"/>

        <TextView
            android:id="@+id/tv_actor_name2"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_textline_extra_large"
            android:layout_marginTop="@dimen/margin_tiny"
            android:height="@dimen/height_textline_small"
            android:fontFamily="@font/roboto_black"
            android:gravity="center_horizontal|start"
            android:text="@string/name_actor2"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/iv_actor2"
            app:layout_constraintStart_toStartOf="@id/iv_actor2"
            app:layout_constraintTop_toBottomOf="@+id/iv_actor2"/>

        <TextView
            android:id="@+id/tv_actor_name3"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_textline_extra_large"
            android:layout_marginTop="@dimen/margin_tiny"
            android:height="@dimen/height_textline_small"
            android:fontFamily="@font/roboto_black"
            android:gravity="center_horizontal|start"
            android:text="@string/name_actor3"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/iv_actor3"
            app:layout_constraintStart_toStartOf="@id/iv_actor3"
            app:layout_constraintTop_toBottomOf="@+id/iv_actor3"/>

        <TextView
            android:id="@+id/tv_actor_name4"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_textline_extra_large"
            android:layout_marginTop="@dimen/margin_tiny"
            android:height="@dimen/height_textline_small"
            android:fontFamily="@font/roboto_black"
            android:gravity="center_horizontal|start"
            android:text="@string/name_actor4"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/iv_actor4"
            app:layout_constraintStart_toStartOf="@id/iv_actor4"
            app:layout_constraintTop_toBottomOf="@+id/iv_actor4"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>